--- a/src/_components.scss
+++ b/src/_components.scss
@@ -56,6 +56,7 @@ button, .sec-link {
 .cta-btn:hover, .cta-link:hover {
     background-color:rgb(16, 141, 199);
     color: white;
+    cursor: pointer;
     transition: $transition;
 }
 
