--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer type="module" src="../js/dashboard.js"></script>
+    <script defer type="module" src="/dashboard.js"></script>
     <title>Document</title>
 </head>
 <body style="background-color: black; color: white; font-size: 18px">
@@ -15,5 +15,6 @@
     <p class="uiData"></p>
     <p class="uiData"></p>
     <p class="uiData"></p>
+    <a href="/logout" class="log-out">Log Out</a>
 </body>
 </html>
